--- a/frontend/src/components/layout/InventoryCards/Cardcaro.css
+++ b/frontend/src/components/layout/InventoryCards/Cardcaro.css
@@ -77,8 +77,8 @@
 .card img {
   width: 100%;
   height: 40%;
-  -o-object-fit: cover;
-  object-fit: cover;
+  object-fit: initial;
+
   position: absolute;
   top: 0;
   left: 0;
